# icfpc2024

./: Main.hs  README.md  icfpc2024-server.cabal  sample.local.yaml  sample.production.yaml  spoilers.md  stack.production.yaml  stack.yaml
ICFPC2024/: API.hs  Communication.hs  Config.hs  Database.hs  Environment.hs  ObjectStorage.hs  Puzzles.hs  Scoring.hs  Static.hs
ICFPC2024/API/: RateLimit.hs  Types.hs
ICFPC2024/Database/: Connection.hs  Queries.hs  Table.hs
ICFPC2024/ObjectStorage/: Environment.hs
ICFPC2024/Puzzles/: Efficiency.hs  Hello.hs  Helpers.hs  Lambdaman.hs  Spaceship.hs  Static.hs  ThreeD.hs
ICFPC2024/Puzzles/Efficiency/: Static.hs
ICFPC2024/Puzzles/Hello/: Static.hs
ICFPC2024/Puzzles/Helpers/: Static.hs
ICFPC2024/Puzzles/Lambdaman/: Static.hs
ICFPC2024/Puzzles/Spaceship/: Static.hs
ICFPC2024/Puzzles/ThreeD/: Static.hs
interpreter/: icfpc2024.cabal
interpreter/ICFPC2024/: AST.hs  Compression.hs  EvaluationExamples.hs  Interpreter.hs  Parser.hs  Printer.hs
interpreter/src-main/: Main.hs
solutions/: README.md
solutions/3d/: 3d1.txt  3d10.txt  3d11.txt  3d12.txt  3d2.txt  3d3.txt  3d4.txt  3d5.txt  3d6.txt  3d7.txt  3d8.txt  3d9.txt
solutions/lambdaman/: lambdaman1.icfp  lambdaman10.icfp  lambdaman11.icfp  lambdaman12.icfp  lambdaman13.icfp  lambdaman14.icfp  lambdaman15.icfp  lambdaman16.icfp  lambdaman17.icfp  lambdaman18.icfp  lambdaman19.icfp  lambdaman2.icfp  lambdaman20.icfp  lambdaman21.icfp  lambdaman3.icfp  lambdaman4.icfp  lambdaman5.icfp  lambdaman6.icfp  lambdaman7.icfp  lambdaman8.icfp  lambdaman9.icfp
solutions/spaceship/: spaceship1.txt  spaceship10.txt  spaceship11.txt  spaceship12.txt  spaceship13.txt  spaceship14.txt  spaceship15.txt  spaceship16.txt  spaceship17.txt  spaceship18.txt  spaceship19.txt  spaceship2.txt  spaceship20.txt  spaceship21.txt  spaceship22.txt  spaceship23.txt  spaceship24.txt  spaceship25.txt  spaceship3.txt  spaceship4.txt  spaceship5.txt  spaceship6.txt  spaceship7.txt  spaceship8.txt  spaceship9.txt
sql/: 01-init.sql  02-best-score.sql  03-unlocking.sql  04-score-bigint.sql  05-code-submit.sql  template.sqlite
static/: language.md  not_enrolled.md  solved.md  task.md
static/3d/: 3d-example.md  3d.md  3d1.md  3d10.md  3d11.md  3d12.md  3d2.md  3d3.md  3d4.md  3d5.md  3d6.md  3d7.md  3d8.md  3d9.md  backdoor.md  config.yaml  example.mustache  example_program.txt
static/efficiency/: backdoor.md  config.yaml  efficiency.md  efficiency10.icfp  efficiency11.icfp  efficiency12.icfp  efficiency2.icfp  efficiency3.icfp  efficiency4.icfp  efficiency5.icfp  efficiency6.icfp  efficiency7.icfp  efficiency8.icfp  efficiency9.icfp  forkbomb.icfp  memorybomb.icfp  password.md
static/hello/: echo.md  echo_response.md  hello.md  scoreboard.md  selfcheck.icfp
static/lambdaman/: config.yaml  lambdaman.md  lambdaman1.txt  lambdaman10.icfp  lambdaman11.txt  lambdaman12.txt  lambdaman13.txt  lambdaman14.txt  lambdaman15.txt  lambdaman16.txt  lambdaman17.txt  lambdaman18.txt  lambdaman19.txt  lambdaman2.txt  lambdaman20.txt  lambdaman21.icfp  lambdaman21.txt  lambdaman3.txt  lambdaman4.txt  lambdaman5.txt  lambdaman6.icfp  lambdaman7.txt  lambdaman8.txt  lambdaman9.icfp
static/spaceship/: config.yaml  lambda.icfp  lambda.txt  spaceship.md  spaceship1.txt  spaceship10.txt  spaceship11.txt  spaceship12.txt  spaceship13.txt  spaceship14.txt  spaceship15.txt  spaceship16.txt  spaceship17.txt  spaceship18.txt  spaceship19.txt  spaceship2.txt  spaceship23.txt  spaceship24.txt  spaceship25.txt  spaceship3.txt  spaceship4.txt  spaceship5.txt  spaceship6.txt  spaceship7.txt  spaceship8.txt  spaceship9.txt  spiral1.txt  spiral2.txt
ttop/: ttop.cabal
ttop/src/: TTop.hs
ttop/src-main/: Main.hs
ttop/src/TTop/: Bimap.hs  Board.hs  History.hs
